# fd_ids_framework

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
src/: client.py  dataset.py  server.py
src/models/: __init__.py  cnn_lstm.py  mlp.py
src/strategies/: __init__.py  dynamic.py  fednova.py  fedprox.py
tools/: dataset_partitioning.py
