[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "IDS-FD"
version = "1.0.0"
description = "Federated Learning for IDS"
dependencies = [
    "flwr[simulation]>=1.13.0",
    "torch",
    "torchvision",
    "pandas",
    "numpy",
    "scikit-learn"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.flwr.app]
publisher = "admin"

[tool.flwr.app.components]
serverapp = "src.server:app"
clientapp = "src.client:app"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
options.backend.client-resources.num-cpus = 1.0
options.backend.client-resources.num-gpus = 0.0
